# c.l.a.r.a

./: Dockerfile  README.md  SECURITY.md  clara_learning.json  create_wiki_pages.sh  jarvis_conversations.json  jarvis_learning.json  push_wiki.sh  pyproject.toml  requirements.txt  setup_wiki.sh  user_preferences.json
.github/workflows/: codeql.yml  docker-build.yml  release.yml  wiki-sync.yml  windows-build.yml
.wiki/: Features.md  Getting-Started.md  Home.md
c.l.a.r.a/: Jarvis_main.py  README.md  alarm.py  app_launcher.py  app_manager.py  calculator.py  clara_main.py  command_handler.py  greedMe.py  hotword_detector.py  ipl_score.py  learning.py  news.py  password_protection.py  playlist.py  remember.py  requirements.txt  responses.py  rock_paper_scissors.py  sayAndListen.py  schedule.py  screenshot_camera.py  speed_test.py  system_commands.py  system_control.py  temperature.py  translator.py  weather.py  web_search.py  whatsapp.py  youtube_controls.py
c.l.a.r.a.wiki/: Features.md  Getting-Started.md  Home.md  _Sidebar.md
c.l.a.r.a/wiki/: _Sidebar.md
