[project]
name = "c-l-a-r-a"
version = "0.1.0"
description = ""
authors = [
    {name = "Subroto Saha",email = "isubrotosaha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "wikipedia (>=1.4.0,<2.0.0)",
    "pyttsx3 (>=2.98,<3.0)",
    "speechrecognition (>=3.14.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "c", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
